First introduction to id in cards and CardDTO and BoardDTO implementation.